--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^1.0.1"
   },
@@ -42,5 +43,4 @@
   },
   "devDependencies": {},
   "proxy": "http://localhost:8080"
-  
 }
